KIK-2033, fix font size for input to avoid zoom on safari on iphone

--- a/corporate/containers/IndicationPage/styles.less
+++ b/corporate/containers/IndicationPage/styles.less
@@ -169,6 +169,7 @@ html {
 
   input {
     color: #99cc66;
+    font-size: 18px;
 
     @media screen and (min-width: @xs) {
       padding: 12px 0 12px;
